# actix-common

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: file.rs  lib.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/commands/generate/: controller.rs  mod.rs  module.rs
crates/macros/: Cargo.toml
crates/macros/src/: common.rs  controller.rs  lib.rs  route.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
examples/todo/src/modules/: mod.rs
examples/todo/src/modules/test/: controller.rs  dto.rs  service.rs
examples/todo/src/modules/todo/: controller.rs  dto.rs  entities.rs  mod.rs
src/: app.rs  controller.rs  lib.rs
