[package]
name = "actix-common-cli"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "actix-cli"
path = "src/bin/actix_cli.rs"

[lib]
name = "actix_cli"
path = "src/lib.rs"


[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
once_cell = "1"
Inflector = "0.11"
anyhow = "1"
