[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
schemars.workspace = true
apistos.workspace = true
actix-common.workspace = true
serde = { version = "1", features = ["derive"] }
env_logger = { version = "0.11" }
